# api/urls.py
@@ -1,6 +1,13 @@
 from django.urls import path
 
-from .views import HelloView, LoginView, LogoutView, ProfileView, RegistrationView
+from .views import (
+    GroupMessageListCreateView,
+    HelloView,
+    LoginView,
+    LogoutView,
+    ProfileView,
+    RegistrationView,
+)
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
@@ -8,4 +15,5 @@ urlpatterns = [
     path("auth/login/", LoginView.as_view(), name="auth-login"),
     path("auth/logout/", LogoutView.as_view(), name="auth-logout"),
     path("auth/profile/", ProfileView.as_view(), name="auth-profile"),
+    path("chat/messages/", GroupMessageListCreateView.as_view(), name="chat-messages"),
 ]
